--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "portals_astro",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -7,11 +7,30 @@
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "serve": "astro check && astro build && bun run runserver.ts"
   },
   "dependencies": {
     "@astrojs/check": "^0.3.3",
+    "@astrojs/node": "^7.0.1",
+    "@astrojs/react": "^3.0.7",
+    "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
     "astro": "^4.0.6",
+    "colors": "^1.4.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "sass": "^1.69.5",
+    "stylelint": "^16.0.2",
+    "stylelint-config-recommended-scss": "^14.0.0",
+    "stylelint-config-standard": "^35.0.0"
   }
 }
