--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/check": "^0.3.3",
     "@astrojs/node": "^7.0.1",
     "@astrojs/react": "^3.0.7",
+    "@astrojs/ts-plugin": "^1.3.1",
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
     "@types/react": "^18.2.45",
