--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "morgan": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "sass": "^1.69.5",
