--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/react": "^3.0.7",
     "@astrojs/ts-plugin": "^1.3.1",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
@@ -23,6 +24,7 @@
     "colors": "^1.4.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
