--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/morgan": "^1.9.9",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
+    "@types/socket.io-client": "^3.0.0",
     "astro": "^4.0.6",
     "colors": "^1.4.0",
     "dotenv": "^16.3.1",
@@ -28,6 +29,7 @@
     "morgan": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "socket.io-client": "^4.7.2",
     "typescript": "^5.3.3",
     "zustand": "^4.4.7"
   },
