--- a/package.json
+++ b/package.json
@@ -18,19 +18,23 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
+    "@types/peerjs": "^1.1.0",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "@types/socket.io-client": "^3.0.0",
+    "@types/uuid": "^9.0.7",
     "astro": "^4.0.6",
     "colors": "^1.4.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "peerjs": "^1.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "socket.io-client": "^4.7.2",
     "typescript": "^5.3.3",
+    "uuid": "^9.0.1",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
